# ceph

./: .trivyignore  CMakeLists.txt  Dockerfile.build  PendingReleaseNotes  ceph.spec.in  do_cmake.sh  make-debs.sh  make-dist
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/docker/: Dockerfile.debian-packages
.github/workflows/: build-binaries.yaml  build-binaries.yml  build-debian.yaml  build-deliverables.yaml  build-deliverables.yml  check-license.yml  qa-symlink.yml  run_security_scan.yaml
Changes/: ChangeNotes-17.2.7  ChangeNotes-18.2.1  ChangeNotes-18.2.7
cmake/modules/: BuildBoost.cmake  BuildOpentelemetry.cmake  BuildRocksDB.cmake  BuildSPDK.cmake  Distutils.cmake  RGWgRPC.cmake  forwardpatch.sh  jaegertracing_akamai_grpc_detect.cmakepatch
debian/: ceph-mgr-modules-core.install  rules
doc/dev/crimson/: index.rst  seastore-write-path-replicated-benchmark.rst  seastore-write-path-single-host-benchmark.rst
doc/man/8/: radosgw-admin.rst
doc/radosgw/: STSLite.rst  cloud-restore.rst  cloud-transition.rst  config-ref.rst  metrics.rst
osd_debug/: README  README.md
osd_debug/srv/: osd-debugger.sh
qa/: CMakeLists.txt
qa/suites/rgw/lifecycle/: overrides.yaml
qa/suites/rgw/verify/: overrides.yaml
qa/tasks/: radosgw_admin.py
qa/workunits/mon/: ceph_test.sh
src/: CMakeLists.txt  buf.gen.yaml  buf.work.yaml  ceph_mon.cc  ceph_osd.cc  vstart.sh
src/auth/: Auth.h  AuthRegistry.cc  Crypto.cc  Crypto.h  KeyRing.cc  RotatingKeyRing.cc  RotatingKeyRing.h
src/auth/cephx/: CephxClientHandler.cc  CephxClientHandler.h  CephxKeyServer.cc  CephxKeyServer.h  CephxProtocol.cc  CephxProtocol.h  CephxSessionHandler.cc
src/cephadm/: tox.ini
src/cls/rgw/: cls_rgw.cc  cls_rgw_types.cc  cls_rgw_types.h
src/common/: AccessLog.cc  AccessLog.h  CMakeLists.txt  PluginRegistry.cc  PluginRegistry.h  buffer.cc  ceph_context.cc  ceph_context.h  cmdparse.h  dout.h  entity_name.cc  entity_name.h  mempool.cc  subsys.h  tracer.cc  tracer.h
src/common/async/detail/: co_throttle_impl.h
src/common/options/: CMakeLists.txt  global.yaml.in  mon.yaml.in  osd.yaml.in  rgw.yaml.in
src/crimson/mon/: MonClient.cc
src/crimson/net/: FrameAssemblerV2.cc  FrameAssemblerV2.h  io_handler.cc
src/crimson/os/alienstore/: CMakeLists.txt
src/crimson/osd/: main.cc  osd.cc
src/include/: ceph_fs.h  common_fwd.h  encoding.h  mempool.h
src/librados/: CMakeLists.txt
src/log/: Log.cc  Log.h
src/mon/: AuthMonitor.cc  AuthMonitor.h  HealthMonitor.cc  HealthMonitor.h  MDSMonitor.cc  MgrMonitor.cc  MgrStatMonitor.cc  MgrStatMonitor.h  MonClient.cc  MonClient.h  MonCommands.h  MonMap.cc  MonMap.h  Monitor.cc  Monitor.h  MonmapMonitor.cc  OSDMonitor.cc  OSDMonitor.h  PaxosService.h  health_check.h
src/msg/: Dispatcher.h
src/msg/async/: AsyncConnection.cc  AsyncConnection.h
src/osd/: OSD.cc  OSD.h
src/pybind/mgr/: CMakeLists.txt  requirements.txt
src/pybind/mgr/cephadm/: configchecks.py  module.py
src/pybind/mgr/dashboard/: CMakeLists.txt  requirements.txt
src/pybind/mgr/diskprediction_local/: predictor.py
src/pybind/mgr/psi/: module.py
src/rgw/: CMakeLists.txt  rgw_admin.cc  rgw_appmain.cc  rgw_asio_client.cc  rgw_asio_client.h  rgw_asio_frontend.cc  rgw_asio_frontend_timer.h  rgw_auth.cc  rgw_auth.h  rgw_auth_keystone.cc  rgw_auth_s3.cc  rgw_auth_s3.h  rgw_basic_types.h  rgw_client_io_filters.h  rgw_common.cc  rgw_common.h  rgw_dedup.cc  rgw_dedup_utils.cc  rgw_dmclock_async_scheduler.h  rgw_dmclock_scheduler_ctx.cc  rgw_file.cc  rgw_file.h  rgw_handoff.cc  rgw_handoff.h  rgw_handoff_fwd.h  rgw_handoff_grpcutil.cc  rgw_handoff_grpcutil.h  rgw_handoff_impl.cc  rgw_handoff_impl.h  rgw_lc.cc  rgw_lc.h  rgw_log.cc  rgw_log_akamai.cc  rgw_log_akamai.h  rgw_lua_utils.cc  rgw_main.cc  rgw_op.cc  rgw_op.h  rgw_perf_counters.cc  rgw_perf_counters.h  (+32 more)
src/rgw/driver/dbstore/: CMakeLists.txt
src/rgw/driver/posix/: rgw_sal_posix.cc
src/rgw/driver/rados/: rgw_bucket.cc  rgw_lc_tier.cc  rgw_lc_tier.h  rgw_notify.cc  rgw_obj_manifest.cc  rgw_obj_manifest.h  rgw_putobj_processor.cc  rgw_putobj_processor.h  rgw_rados.cc  (+6 more)
src/rgw/radosgw-admin/: radosgw-admin.cc
src/rgw/services/: svc_user_rados.cc
src/script/: README_toolchain_selection.rst  build-with-container.py  buildcontainer-setup.sh  ccache.crimson.config  ccache.osd.config  lib-build.sh  run-make.sh
src/script/custom/: README.md  abseil.sh  ccache-bin.sh  ccache.config  ccache.sh  config.env  gcc.sh  golang.sh  grpc.sh  openssl3.sh  run-all.sh  runtime-libstdcxx.sh
src/test/: CMakeLists.txt  crypto.cc  test_c2c.cc  test_mempool.cc  test_rgw_sts_key_truncation.cc
src/test/cls_2pc_queue/: test_cls_2pc_queue.cc
src/test/cls_rgw/: test_cls_rgw.cc
src/test/mon/: CMakeLists.txt  test-mon-msg.cc  test_cephx_key_revocation.cc  test_mon_workloadgen.cc
src/test/rgw/: CMakeLists.txt  test_rgw_auth_handoff.cc  test_rgw_expat_mitigations.cc  test_rgw_grpc.cc  test_rgw_grpc_util.h  test_rgw_lc.cc  test_rgw_log_akamai.cc  test_rgw_otel_trace.cc  test_rgw_secret_encrypt.cc  test_rgw_storequery.cc  test_rgw_storequery_util.cc  test_rgw_storequery_util.h  test_rgw_ubns.cc
src/tools/: ceph_authtool.cc  ceph_monstore_tool.cc  monmaptool.cc
src/tools/akamai/: encode_utf8.py  rmomapkey.cc
systemd/: ceph-osd@.service.in
(+27 files in other folders)
